@@ -1,3 +1,8 @@
+2009-10-15  TOKI Yoshinori  <toki@freedom.ne.jp>
+
+	* lib/gluon/controller.rb: controller base is not module but
+	class.
+
 2009-10-14  TOKI Yoshinori  <toki@freedom.ne.jp>
 
 	* lib/gluon/controller.rb: meta-info implementation is separated
